--- a/index.html
+++ b/index.html
@@ -1,1 +1,108 @@
 <!-- Agrega aquí la estructura HTML de tu sitio web -->
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" type="text/css" href="css/main.css">
+		<link href="https://fonts.googleapis.com/css?family=Lato:400,900|Montserrat:800,900" rel="stylesheet">
+		<title>Freelancer</title>
+	</head>
+	<body>
+		<div>
+			<!-- Header -->
+			<header class="text-uppercase">
+				<h1>start bootstrap</h1>
+				<div class="menu">
+					<a>portfolio</a>
+					<a>about</a>
+					<a>contact</a>
+				</div>
+			</header>
+			<!-- Primera Seccion -->	
+			<main class="clear">
+				<img src="assets/images/profile.png" alt="Coder man">
+				<div>
+					<h2 class="text-uppercase">start bootstrap</h2>
+					<p>Web Developer-Graphic Artist-User Experience Designer</p>
+				</div>
+			</main>
+
+			<!-- Seccion de Portafolio de Imagenes-->
+			<section class="portfolio text-uppercase">
+				<h2>portfolio</h2>
+				<div class="full-portfolio">
+					<div class="set1-imgs">
+						<a><img src="assets/images/portfolio/cabin.png" alt="Cabin"></a>
+						<a><img src="assets/images/portfolio/cake.png" alt="Cake"></a>
+						<a><img src="assets/images/portfolio/circus.png" alt="Circus"></a>
+					</div>
+					<div class="set2-imgs">
+						<a><img src="assets/images/portfolio/game.png" alt="Game"></a>
+						<a><img src="assets/images/portfolio/safe.png" alt=""></a>
+						<a><img src="assets/images/portfolio/submarine.png" alt="Submarine"></a>
+					</div>
+				</div>
+			</section>
+			<!-- Seccion About-->
+			<section class="clear about">
+				<h2 class="text-uppercase">about</h2>
+				<div>
+					<div>
+						<p>Freelancer is a free bootstrap theme created by Start Boostrap. The download includes the complete source files including
+						HTML, CSS, and Javascript as well as optional LESS stylesheets for easy customization.</p>
+						<p>Whether youre an student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+					</div>
+					<button class="clear download" href="">Download Theme</button>
+				</div>
+			</section>
+
+			<!-- Seccion Contact Me -->
+			<section class="contact-me text-uppercase clear">
+				<h2>contact me</h2>
+				<div>
+				 	<form>
+			    		<input type="text" name="" placeholder="Name"><br>
+		        		<hr>
+		        		<input type="text" name="" placeholder="Email Address"><br>
+		        		<hr>
+		        		<input type="text" name="" placeholder="Phone Number"><br>
+		        		<hr>
+		        		<input type="text" name="" placeholder="Message"><br>
+		        		<hr class="last">
+	     			</form> 
+				</div>	
+				<button class="button-send clear" type="submit">Send</button>
+			</section>
+
+			<!-- Footer-->
+			<footer>
+				<div class="location">
+			        <p class="footer-subs text-uppercase">location</p>
+			        <div class="text">
+			        	<p>2215 John Daniel Drive</p>
+			        	<p>Clark, MO 65243</p>
+			        </div>
+			    </div>
+			    <div class="around-web">
+			        <p class="footer-subs text-uppercase">around the web</p>
+			     	<div>
+			          <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+			          <a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
+			          <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+			          <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+			          <a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a>
+			        </div>
+			    </div>
+				<div class="about-freelancer">
+			        <p class="footer-subs text-uppercase">about freelancer</p>
+			        <div class="text">
+				        <p>Freelance is a free to use, open source </p>
+				        <p>Bootstrap theme created by <a id="green-letter"href="#">Start Bootstrap</a>.</p>
+				    </div>
+			     </div>
+			     <p class="copyright">Copyright © Your Website 2017</p>
+			</footer> 
+		</div> 
+	</body>
+</html>
